--- a/emBODY/eBcode/arch-dspic/board/2foc/appl/2FOC-V3_6/2FOC-V3.X/nbproject/Makefile-genesis.properties
+++ b/emBODY/eBcode/arch-dspic/board/2foc/appl/2FOC-V3_6/2FOC-V3.X/nbproject/Makefile-genesis.properties
@@ -1,12 +1,13 @@
 #
-#Fri Sep 08 11:20:22 CEST 2023
-default.languagetoolchain.version=1.60
-default.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v5.45\\packs\\Microchip\\dsPIC33F-GP-MC_DFP\\1.3.64
-default.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=300f2067f499e9e7c7fedace3cbebf24
+#Wed Sep 25 18:16:15 CEST 2024
+default.languagetoolchain.version=1.24
+default.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v6.15\\packs\\Microchip\\dsPIC33F-GP-MC_DFP\\1.3.64
 conf.ids=default
-default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc16\\v1.60\\bin
-host.id=1ajv-tb6w-og
-configurations-xml=1454339ad8836aa635cc41afc3790130
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=4e1c703e057ce3824a620f2a747a6f88
-proj.dir=C\:\\Users\\ascalzo\\Documents\\IIT\\Projects-GIT\\2FOCV36\\icub-firmware\\emBODY\\eBcode\\arch-dspic\\board\\2foc\\appl\\2FOC-V3_6\\2FOC-V3.X
+default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc16\\v1.24\\bin
+host.id=2o04-h5mj-i
+default.platformTool.md5=null
+configurations-xml=b7e3e64ee5ad0ee1be18f7ddb77d9675
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=e62346c0c0ecee2637e613b49cb7b7fa
+proj.dir=C\:\\Users\\ascalzo\\Documents\\Work\\Repos\\FIRMWARE\\icub-firmware_3_6_26\\emBODY\\eBcode\\arch-dspic\\board\\2foc\\appl\\2FOC-V3_6\\2FOC-V3.X
 host.platform=windows
+default.com-microchip-mplab-nbide-toolchain-xc16-XC16LanguageToolchain.md5=07f7da95e66d00aa4668de5175f752c5
